@@ -39,7 +39,7 @@
          <version>10.0.0</version>
       </dependency>
       <dependency>
-         <groupId>org.hibernate</groupId>
+         <groupId>org.hibernate.orm</groupId>
          <artifactId>hibernate-core</artifactId>
          <version>6.1.7.Final</version>
          <scope>provided</scope>
@@ -95,17 +95,6 @@
 
    <build>
       <plugins>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.11.0</version>
-            <configuration>
-               <compilerArgs>
-                  <arg>--add-opens</arg>
-                  <arg>java.base/java.lang=ALL-UNNAMED</arg>
-               </compilerArgs>
-            </configuration>
-         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
